--- a/todo-list-new/package.json
+++ b/todo-list-new/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.12.2",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "styled-components": "^5.3.9",
